--- a/docs-site/docs/features/hover-docs.mdx
+++ b/docs-site/docs/features/hover-docs.mdx
@@ -133,5 +133,5 @@ flows:
 *   **Pin:** Click the pin icon in the popup corner to keep it visible while you navigate.
 
 :::tip
-Documentation popups are available in the completion list too. While the suggestion list is open, press <Keystroke mac={[{icon: "⌃", label: "Ctrl"}, {label: "Q"}]} win={[{label: "Ctrl"}, {label: "Q"}]} /> to preview the documentation for the selected item.
+Documentation popups are available in the completion list too — for YAML keys, task names, and task parameters. See [Quick Documentation in Completion](./completion#quick-documentation-in-completion) for details.
 :::
