--- a/docs-site/docs/features/flow-docs.mdx
+++ b/docs-site/docs/features/flow-docs.mdx
@@ -68,7 +68,7 @@ connect:
 
 The plugin uses this metadata to provide a first-class development experience:
 
-*   **Autocomplete:** Suggestions for parameter names when writing a <span className="tokenBadge" data-kind="step">call</span> step.
+*   **Autocomplete:** Suggestions for **input** parameter names in the <span className="tokenBadge" data-kind="step">in</span> block and **output** parameter names in the <span className="tokenBadge" data-kind="step">out</span> field when writing a <span className="tokenBadge" data-kind="step">call</span> step.
 *   **Validation:** Highlighting for invalid types or missing mandatory parameters.
 *   **Quick Fixes:** Automatically sync documentation with actual flow usage.
 *   **Hover Tooltips:** Descriptions from your documentation blocks are shown when you hover over flow calls.
