--- a/docs-site/docs/features/completion.mdx
+++ b/docs-site/docs/features/completion.mdx
@@ -99,6 +99,53 @@ flows:
     </figcaption>
 </figure>
 
+## Expression Variable Completion
+
+Inside `${...}` expressions, the plugin suggests variable names that are in scope at the current cursor position. Press <Keystroke mac={[{icon: "⌃", label: "Ctrl"}, {label: "Space"}]} win={[{label: "Ctrl"}, {label: "Space"}]} /> to trigger completion.
+
+Each suggestion shows its **source** on the right side, so you know where the variable comes from:
+
+*   **built-in** — Concord runtime variables like `txId`, `workDir`, `initiator`, `processInfo`, etc. Built-in variables also show a short description.
+*   **argument** — Variables declared in `configuration.arguments`.
+*   **flow in** — Input parameters defined in the flow's [Documentation Block](./flow-docs).
+*   **set** — Variables assigned by <span className="tokenBadge" data-kind="step">set</span> steps earlier in the flow.
+*   **step out** — Variables captured by `out` fields of preceding steps.
+
+```concord
+configuration:
+  arguments:
+    appName: "my-app"
+
+flows:
+  ##
+  # Deploy an application
+  # in:
+  #   env: string, mandatory, Target environment
+  ##
+  deploy:
+    - set:
+        version: "1.0"
+    - task: concord
+      out: result
+    - log: "${}"
+    #         ^ Ctrl+Space here suggests:
+    #           txId         built-in
+    #           workDir      built-in
+    #           appName      argument
+    #           env          flow in
+    #           version      set
+    #           result       step out
+```
+
+Completion is context-aware — it only suggests standalone variable names. It does **not** fire after a dot (property access like `myObj.something`) or inside function names.
+
+<figure className="docFigure docFigure--md">
+    <img src={require('@site/static/img/completion-el-vars.png').default} alt="Expression Variable Completion" />
+    <figcaption>
+        Variable completion inside an EL expression, showing source labels for each suggestion.
+    </figcaption>
+</figure>
+
 ## Flow Documentation Completion
 
 When writing structured flow documentation (`/** ... */`), the plugin helps you define your parameters correctly:
